8364579: [lworld] Null oop fields are not correctly handled in scalarized returns